--- a/CSS/style.css
+++ b/CSS/style.css
@@ -144,3 +144,51 @@ form{
         visibility: hidden;
     }
     }
+
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(4,minmax(90px,1fr));
+        grid-template-rows: repeat(6,minmax(100px,1fr));
+        justify-items: center;
+        align-items: center;
+    }
+    #newsletter{
+        grid-column: 1/5;
+        grid-row: 1/3;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid black;
+        padding: 30px;
+        background-color: white;
+    }
+    #informations_agence{
+        grid-column: 1/3;
+        grid-row: 3/5;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #offres_entreprise{
+        grid-column: 3/5;
+        grid-row: 3/5;
+    }
+    #Nos_formules{
+        grid-column: 1/3;
+        grid-row: 5/6; 
+    }
+    #Infos_pratiques{
+        grid-column: 3/5;
+        grid-row: 5/6;
+    }
+    #paiements{
+        grid-column: 1/4;
+        grid-row: 6/7; 
+    }
+    #ancv{
+        grid-column: 4/5;
+        grid-row: 6/7;
+    }
+    #paiements img, #ancv img{
+       width: 100%;
+    }
+
