--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,13 @@
+html{
+    font-size: 5vw;
+}
+
 body {
     margin:0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
+    
 }
 .logo{
     display: flex;
@@ -21,11 +26,12 @@ header{
     background-color: white;
     align-items: center;
     z-index: 10;
+    font-size: clamp(12px,1rem,24px);
 }
 nav ul{
     display: none;
     position: absolute;
-    left: 0;
+    left:0;
     list-style-type: none;
     width: 100%;
     padding-inline-start:0;
@@ -61,15 +67,34 @@ nav ul li{
     width: 100%;
     text-align: center;
     border-radius: 20px;
-    padding: 10px;
+    padding: 10px 0;
     background-color: #E9FCF7;
 }
 nav ul li:nth-child(1), nav ul li:last-child{
     border: none;
     background-color: white;
 }
-form{
+main{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+main form{
+    display: flex;
+}
+#adresse{
+    width: clamp(15px,300px,75vw);
+}
+#start{
+    max-width: 5vw;
+}
+#recherche{
+    max-width: 15vw;
+}
+main h1{
+    padding : 20px;
+    color: #2F5A28
 }
 #plage{
     width: 100%;
@@ -82,13 +107,22 @@ form{
 }
 .photos_destination{
     position: absolute;
-    height: auto;
+    height: 250px;
     margin: 20px;
+    padding: 10px;
     visibility: hidden;
-  
+    border: 1px solid black;
+    border-radius: 15px;
+ 
 }
+.photos_destination figure{
+   position: relative;
+   height: 150px;
+   margin: 10px;
+}
+
 .photos_destination img{
-    width: 200px;
+    height: 100%;
 }
 #img_factice{
     visibility: hidden;
@@ -144,14 +178,24 @@ form{
         visibility: hidden;
     }
     }
-
+    footer {
+        background-color: #b6d5d9;
+        padding: 20px 0;
+        text-align: center;
+        font-size: clamp(16px,1rem,32px);
+    }
     .grid{
         display: grid;
-        grid-template-columns: repeat(4,minmax(90px,1fr));
-        grid-template-rows: repeat(6,minmax(100px,1fr));
+        grid-template-columns: repeat(4,1fr);
+        grid-auto-rows: minmax(50px, auto);
+        row-gap: 0.7rem;
         justify-items: center;
         align-items: center;
     }
+    .grid >*{
+        margin:0 1.2rem;
+    }
+    
     #newsletter{
         grid-column: 1/5;
         grid-row: 1/3;
@@ -163,32 +207,37 @@ form{
     }
     #informations_agence{
         grid-column: 1/3;
-        grid-row: 3/5;
+        grid-row: 3/6;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+    #informations_agence p{
+        margin:0 0 20px;
+    }
+
+    #informations_agence a{
+        line-height: 2.5em;
+    }
     #offres_entreprise{
         grid-column: 3/5;
-        grid-row: 3/5;
+        grid-row: 3/4;
     }
     #Nos_formules{
-        grid-column: 1/3;
-        grid-row: 5/6; 
+        grid-column: 3/5;
+        grid-row: 4/5; 
     }
     #Infos_pratiques{
         grid-column: 3/5;
         grid-row: 5/6;
     }
     #paiements{
-        grid-column: 1/4;
+        display: flex;
+        grid-column: 1/5;
         grid-row: 6/7; 
     }
-    #ancv{
-        grid-column: 4/5;
-        grid-row: 6/7;
-    }
-    #paiements img, #ancv img{
-       width: 100%;
+    
+    #paiements img {
+       height: 50px;
     }
 
