--- a/CSS/yucatan.css
+++ b/CSS/yucatan.css
@@ -1,3 +1,7 @@
+html{
+    font-size: 5vw;
+}
+
 body {
     margin:0;
     padding: 0;
@@ -21,6 +25,7 @@ header{
     background-color: white;
     align-items: center;
     z-index: 10;
+    font-size: clamp(10px,1rem,24px);
 }
 nav ul{
     display: none;
@@ -89,7 +94,7 @@ main > p{
 }
 
 main div > p{
-    margin : 10px 10px;
+    margin : 0.5rem;
     text-align: center;
     background-color: lightgray;
     padding : 10px;
@@ -110,11 +115,77 @@ main div > p{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10%;
+    padding: 0 1rem;
 }
 .flex-row-inline{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+
+footer {
+    background-color: #b6d5d9;
+    padding: 20px 0;
+    text-align: center;
+    font-size: clamp(10px,1rem,32px);
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-auto-rows: minmax(50px, auto);
+    row-gap: 0.7rem;
+    justify-items: center;
+    align-items: center;
+}
+.grid >*{
+    margin:0 1.2rem;
+}
+
+#newsletter{
+    grid-column: 1/5;
+    grid-row: 1/3;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 30px;
+    background-color: white;
+}
+
+
+#informations_agence{
+    grid-column: 1/3;
+    grid-row: 3/6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#informations_agence p{
+    margin:0 0 20px;
+}
+
+#informations_agence a{
+    line-height: 2.5em;
+}
+#offres_entreprise{
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+#Nos_formules{
+    grid-column: 3/5;
+    grid-row: 4/5; 
+}
+#Infos_pratiques{
+    grid-column: 3/5;
+    grid-row: 5/6;
+}
+#paiements{
+    display: flex;
+    grid-column: 1/5;
+    grid-row: 6/7; 
+    background-color: white;
+}
+
+#paiements img {
+   height: clamp(20px, 3rem, 100px);
 }
