--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,6 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
-    
 }
 .logo{
     display: flex;
@@ -89,7 +88,7 @@ main form{
 }
 #adresse{
     width: clamp(15px,300px,75vw);
-    background-color: rgb(247, 245, 245);
+    background-color: rgb(243, 234, 234);
 }
 #start{
     max-width: 5vw;
@@ -100,12 +99,18 @@ main form{
     font-size: clamp(8px,0.5rem,15px);
 }
 main h1{
+    margin: 50px 0 10px;
     padding : 20px;
     color: #2F5A28;
     font-size: clamp(30px,1.2rem,80px);
+    text-align: center;
+}
+.ressourcer{
+    margin: 0 0 40px;
 }
 #plage{
     width: 100%;
+    border:1px solid rgb(201, 223, 233)
 }
 #destination {
     display: flex;
@@ -116,31 +121,36 @@ main h1{
 .photos_destination{
     position: absolute;
     height: 300px;
-    margin: 20px;
+    width: 70vw;
+    margin: 20px 20px 40px;
     padding: 10px;
     visibility: hidden;
     border: 1px solid black;
     border-radius: 15px;
- 
+    box-shadow: -5px 15px 15px 5px rgba(77, 172, 216, 0.2);
+    
 }
 .photos_destination figure{
-   position: relative;
-   height: 150px;
+   display:flex;
+   flex-direction: column;
    margin: 10px;
-   
 }
 
 .photos_destination img{
-    height: 100%;
+    height: 150px;
+    align-self: center;
 }
+
 .photos_destination figure figcaption p{
     font-size: clamp(10px,1rem,24px);
      
 }
 .photos_destination figure figcaption p:nth-child(3){
     text-align: right;
-    line-height: 30px;
-    
+    line-height: 30px;  
+}
+.photos_destination figure figcaption p:nth-child(3):hover{
+    color: green;
 }
 #img_factice{
     visibility: hidden;
@@ -200,7 +210,7 @@ main h1{
         background-color: #b6d5d9;
         padding: 20px 0;
         text-align: center;
-        font-size: clamp(16px,1rem,32px);
+        font-size: clamp(10px,1rem,32px);
     }
     .grid{
         display: grid;
@@ -223,6 +233,8 @@ main h1{
         padding: 30px;
         background-color: white;
     }
+    
+    
     #informations_agence{
         grid-column: 1/3;
         grid-row: 3/6;
@@ -233,7 +245,7 @@ main h1{
     #informations_agence p{
         margin:0 0 20px;
     }
-
+    
     #informations_agence a{
         line-height: 2.5em;
     }
@@ -253,9 +265,10 @@ main h1{
         display: flex;
         grid-column: 1/5;
         grid-row: 6/7; 
+        background-color: white;
     }
     
     #paiements img {
-       height: 50px;
+       height: clamp(20px, 3rem, 100px);
     }
 
