--- a/CSS/style.css
+++ b/CSS/style.css
@@ -234,7 +234,6 @@ main h1{
         background-color: white;
     }
     
-    
     #informations_agence{
         grid-column: 1/3;
         grid-row: 3/6;
@@ -270,5 +269,64 @@ main h1{
     
     #paiements img {
        height: clamp(20px, 3rem, 100px);
+    }
+
+    @media screen and (min-width:1024px){
+    footer{
+        display: flex;
+        flex-direction: column;
+        font-size: clamp(18px,0.5rem,36px);
+        padding: 80px 0;
+    }
+    footer p:last-child{
+        margin-bottom: 0;
+    }
+    .grid{
+        gap:20px;
+        align-items:flex-start;
+        grid-template-columns: repeat(4,minmax(50px,300px));
+        margin: 0 auto;
+    }
+        .grid >*{
+        margin: 0;
+    }   
+     #newsletter{
+        grid-column: 4/5;
+        grid-row: 2/3;
+     }
+     #newsletter label{
+         font-size: clamp(16px,0.3rem,36px);
+     }
+     #newsletter div{
+         display: flex;
+         justify-content: center;
+     }
+     #newsletter input[type="mail"]{
+         width: clamp(120px,10vw,350px);
+     }
+     #informations_agence{
+         grid-column: 1/2;
+         grid-row: 1/3;
+     }
+     #informations_agence a{
+         line-height: 1.5em;
+     }
+
+     #offres_entreprise{
+         grid-column: 3/4;
+         grid-row: 1/2;
+     }
+     #Nos_formules{
+         grid-column: 2/3;
+         grid-row: 1/2;
+     }
+     #Infos_pratiques{
+         grid-column: 4/5;
+         grid-row: 1/2;
+     }
+     #paiements{
+         grid-column: 2/4;
+         grid-row: 2/3;
+     }
     }
 
