--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ header{
     z-index: 10;
     font-size: clamp(12px,1rem,24px);
 }
-header >a{
+header >a, #compte_agence>a{
     display: none;
 }
 nav label img{
