--- a/CSS/yucatan.css
+++ b/CSS/yucatan.css
@@ -28,6 +28,9 @@ header{
     z-index: 10;
     font-size: clamp(12px,1rem,24px);
 }
+header >a, #compte_agence>a{
+    display: none;
+}
 nav label img{
     width: clamp(20px,3rem,100px);
 }
@@ -76,10 +79,6 @@ nav ul li{
 nav ul li:nth-child(1), nav ul li:last-child{
     border: none;
     background-color: white;
-}
-
-.image_presentation{
-    width: 100%;
 }
 main{
     display: flex;
@@ -204,6 +203,47 @@ footer {
 }
 
 @media screen and (min-width:1024px){
+    nav label img{
+        display: none;
+        }
+    nav ul {
+        display: flex;
+        position: relative;
+        justify-content: center;
+        padding-inline-start: 10%;
+
+    }
+    nav ul li{
+        width: max-content;
+        border-radius: 0;
+        padding:clamp(10px,0.2rem,30px) clamp(20px,0.4rem,40px);
+        font-size: clamp(18px,0.35rem,42px);
+
+    }
+    nav ul li:nth-child(1), nav ul li:nth-child(2), nav ul li:last-child{
+        display: none;
+    }
+    header{
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        padding: 0 7%;
+    }
+
+    header>a, #compte_agence>a{
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        font-size: clamp(18px,0.4rem,42px);
+    }
+    header >a img, #compte_agence>a img{
+        height: clamp(60px,1.3rem,110px);
+    }
+    #compte_agence{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    
     main{
         display: grid;
         grid-template-columns:repeat(2, 1fr);
