--- a/CSS/style.css
+++ b/CSS/style.css
@@ -275,10 +275,29 @@ main h1{
     }
 
     @media screen and (min-width:1024px){
-        
-    nav label img{
+    nav{
+        position: relative;
+        width: 100%;
+        }
+    nav label{
+        width: 100%;
         display: none;
         }
+    nav label img{
+        height: 10px;
+        width: 100%;     
+    }
+    nav input[type=checkbox]:checked + #menu_cache { 
+        max-height: 0;
+        overflow: hidden;
+    }
+    #menu_cache{
+        transition-duration: 0.5s;
+        max-height: 300px;
+    }
+    nav input[type=checkbox]:checked + nav label{
+        display: block;
+    }
     nav ul {
         display: flex;
         position: relative;
@@ -299,7 +318,6 @@ main h1{
     header{
         justify-content: space-evenly;
         flex-wrap: wrap;
-        padding: 0 7%;
     }
 
     header>a, #compte_agence>a{
@@ -331,7 +349,7 @@ main h1{
         grid-template-columns: repeat(4,minmax(50px,300px));
         margin: 0 auto;
     }
-        .grid >*{
+    .grid >*{
         margin: 0;
     }   
      #newsletter{
