--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ nav ul{
     width: 100%;
     padding-inline-start:0;
 }
-nav input[type=checkbox]:checked + ul {
+nav input[type=checkbox]:checked + div > ul {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -281,7 +281,7 @@ main h1{
         }
     nav label{
         width: 100%;
-        display: none;
+        visibility: hidden;
         }
     nav label img{
         height: 10px;
@@ -290,13 +290,18 @@ main h1{
     nav input[type=checkbox]:checked + #menu_cache { 
         max-height: 0;
         overflow: hidden;
+      }
+
+    nav input[type=checkbox]:checked + #menu_cache > ul { 
+        flex-direction: row;
     }
+
     #menu_cache{
         transition-duration: 0.5s;
         max-height: 300px;
     }
-    nav input[type=checkbox]:checked + nav label{
-        display: block;
+    nav input[type=checkbox]:checked ~ label{
+        visibility: visible;
     }
     nav ul {
         display: flex;
