--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,6 +31,9 @@ header{
 header >a, #compte_agence>a{
     display: none;
 }
+header a{
+    text-decoration: none;
+}
 nav label img{
     width: clamp(20px,3rem,100px);
 }
@@ -80,6 +83,7 @@ nav ul li:nth-child(1), nav ul li:last-child{
     border: none;
     background-color: white;
 }
+
 main{
     display: flex;
     flex-direction: column;
@@ -215,6 +219,9 @@ main h1{
         text-align: center;
         font-size: clamp(10px,1rem,32px);
     }
+    footer a{
+        text-decoration: none;
+    }
     .grid{
         display: grid;
         grid-template-columns: repeat(4,1fr);
@@ -275,18 +282,10 @@ main h1{
     }
 
     @media screen and (min-width:1024px){
-    nav{
-        position: relative;
-        width: 100%;
-        }
     nav label{
-        width: 100%;
-        visibility: hidden;
-        }
-    nav label img{
-        height: 10px;
-        width: 100%;     
+        display: none;
     }
+
     nav input[type=checkbox]:checked + #menu_cache { 
         max-height: 0;
         overflow: hidden;
@@ -300,15 +299,13 @@ main h1{
         transition-duration: 0.5s;
         max-height: 300px;
     }
-    nav input[type=checkbox]:checked ~ label{
-        visibility: visible;
-    }
+    
     nav ul {
         display: flex;
         position: relative;
         justify-content: center;
         padding-inline-start: 10%;
-
+    
     }
     nav ul li{
         width: max-content;
