--- a/CSS/yucatan.css
+++ b/CSS/yucatan.css
@@ -31,6 +31,9 @@ header{
 header >a, #compte_agence>a{
     display: none;
 }
+header a{
+    text-decoration: none;
+}
 nav label img{
     width: clamp(20px,3rem,100px);
 }
@@ -42,7 +45,7 @@ nav ul{
     width: 100%;
     padding-inline-start:0;
 }
-nav input[type=checkbox]:checked + ul {
+nav input[type=checkbox]:checked + div > ul {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,6 +83,7 @@ nav ul li:nth-child(1), nav ul li:last-child{
     border: none;
     background-color: white;
 }
+
 main{
     display: flex;
     flex-direction: column;
@@ -87,6 +91,11 @@ main{
     font-size: clamp(12px, 1rem, 36px);
     text-align: center;
 }
+
+.image_presentation{
+    width: 100%;
+}
+
 main h1{
     padding : 20px;
     background-color: lightgreen;
@@ -203,15 +212,30 @@ footer {
 }
 
 @media screen and (min-width:1024px){
-    nav label img{
+    nav label{
         display: none;
-        }
+    }
+
+    nav input[type=checkbox]:checked + #menu_cache { 
+        max-height: 0;
+        overflow: hidden;
+      }
+
+    nav input[type=checkbox]:checked + #menu_cache > ul { 
+        flex-direction: row;
+    }
+
+    #menu_cache{
+        transition-duration: 0.5s;
+        max-height: 300px;
+    }
+    
     nav ul {
         display: flex;
         position: relative;
         justify-content: center;
         padding-inline-start: 10%;
-
+    
     }
     nav ul li{
         width: max-content;
@@ -226,7 +250,6 @@ footer {
     header{
         justify-content: space-evenly;
         flex-wrap: wrap;
-        padding: 0 7%;
     }
 
     header>a, #compte_agence>a{
@@ -243,7 +266,6 @@ footer {
         flex-wrap: nowrap;
     }
 
-    
     main{
         display: grid;
         grid-template-columns:repeat(2, 1fr);
