--- a/CSS/devis.css
+++ b/CSS/devis.css
@@ -82,24 +82,16 @@ nav ul li:nth-child(1), nav ul li:last-child{
     background-color: white;
 }
 .container{
-    display: grid;
-    grid-template-columns:/*1fr 2fr 1fr*/ repeat(4,1fr); /*repeat(3, minmax(min-content, max-content));*/
-    grid-template-rows:auto auto auto auto auto;
-    gap: 20px; 
-    margin: 0 20px;
-    height: 100%;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin:20px;
+   
     /*grid-auto-flow: column;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille
     grid-auto-rows: 100px;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille*/
 }
-.container1{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);/*1fr 2fr 1fr repeat(4,1fr); /*repeat(3, minmax(min-content, max-content));*/
-    grid-template-rows:auto auto auto auto;
-    gap: 20px;
-    margin: 0 20px;
-    height: 100%;
-    width: 100%;
+.activites{
+    flex-basis: 100%;
 }
 .item
 {
@@ -110,28 +102,33 @@ nav ul li:nth-child(1), nav ul li:last-child{
     font-weight: bolder;
     padding: 15px;
     transition: transform all 1s ease;
+    margin:10px 0;
 }
 .item:hover{
     transform: scale(1.05);
     background-color: rgb(79, 133, 92);
 }
-h1{
+main h1{
     text-align: center;
     background-color: white
 }
+
+main h2{
+    text-align: center;
+}
 .carte_choco{
-    width: 600px; 
+    width: 95vw; 
     margin:0 auto;
 }
- .carte_choco img{
-    width:100%;
-    transition: transform all 1s ease;
+.carte_choco img{
+    width:150%;
+    position: relative;
+    left:-40%;
 }
- img:hover{
-    transform: scale(1.2);
-}
-h2{
-    text-align: center;
+.carte_choco div{
+    display: flex;
+    position: relative;
+    overflow: hidden;
 }
 footer {
     background-color: #b6d5d9;
@@ -142,7 +139,7 @@ footer {
 footer a{
     text-decoration: none;
 }
-.grid{
+footer .grid{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-auto-rows: minmax(50px, auto);
@@ -150,7 +147,7 @@ footer a{
     justify-items: center;
     align-items: center;
 }
-.grid >*{
+footer .grid >*{
     margin:0 1.2rem;
 }
 
@@ -252,6 +249,59 @@ footer a{
         display: flex;
         flex-wrap: nowrap;
     }
+    .carte_choco{ 
+        margin:0 auto;
+    }
+    .carte_choco img{
+        width:100%;
+        left: 0;
+        transition: transform all 1s ease;
+    }
+    .carte_choco img:hover{
+        transform: scale(1.2);
+        left: -10%;
+    }
+    .container{
+        display: grid;
+        grid-template-columns:/*1fr 2fr 1fr*/ repeat(4,1fr); /*repeat(3, minmax(min-content, max-content));*/
+        gap: 20px; 
+        margin:20px;
+       
+        /*grid-auto-flow: column;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille
+        grid-auto-rows: 100px;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille*/
+    }
+    .container1{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);/*1fr 2fr 1fr repeat(4,1fr); /*repeat(3, minmax(min-content, max-content));*/
+        gap: 20px;
+        margin:20px;
+        
+    }
+    .activites{
+        grid-column:1/5;
+    }
+    .item
+    {
+        border: 1px yellow solid;
+        background-color: rgb(27, 113, 64);
+        color: aliceblue;
+        font-size: 20px;
+        font-weight: bolder;
+        padding: 15px;
+        transition: transform all 1s ease;
+    }
+    .item:hover{
+        transform: scale(1.05);
+        background-color: rgb(79, 133, 92);
+    }
+    h1{
+        text-align: center;
+        background-color: white
+    }
+    
+    h2{
+        text-align: center;
+    }
     
     footer{
         display: flex;
@@ -262,13 +312,13 @@ footer a{
     footer p:last-child{
         margin-bottom: 0;
     }
-    .grid{
+    footer .grid{
         gap:20px;
         align-items:flex-start;
         grid-template-columns: repeat(4,minmax(50px,300px));
         margin: 0 auto;
     }
-    .grid >*{
+    footer .grid >*{
         margin: 0;
     }   
      #newsletter{
