--- a/CSS/mexique.css
+++ b/CSS/mexique.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(174, 247, 247);
 }
 .logo{
     display: flex;
@@ -83,20 +82,11 @@ nav ul li:nth-child(1), nav ul li:last-child{
 }
 
 .container{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    /*grid-template-columns:/*1fr 2fr 1fr repeat(3,1fr); /*repeat(3, minmax(min-content, max-content));
-    grid-template-rows: 150px 150px; exemple grid.css*/
-    grid-template-rows: 0.2fr 0.5fr 0.2fr;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:"en-tête en-tête"
-                        "principal lateral"/*le point permet de créer une cellule vide*/
-                        "pied pied";
-    /*height: 500px;
-    width: 800px;*/
-    /*grid-auto-flow: column;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille
-    grid-auto-rows: 100px;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille*/
-}
+    background-color: rgb(220, 243, 250);
+    }
 .item
 {
     background-color: rgb(220, 243, 250);
@@ -107,13 +97,15 @@ nav ul li:nth-child(1), nav ul li:last-child{
     
 }
 
-header{grid-area:en-tête;}
 section{grid-area:principal;}
 aside{grid-area:lateral;}
-footer{grid-area:pied;}
+
 
 .texte1{
     text-align: left;
+}
+.fotolia{
+    width: 100%;
 }
 aside {
     background-size: cover;
@@ -128,19 +120,31 @@ button{
     background-color: rgb(106, 198, 36);
     border-radius: 15px;
     color: blue;
-    font-size: 20px;
+    font-size: 18px;
+    margin-bottom: 20px;
+    margin-left: 250px;
 }
 button:hover{
     transform:scale(1.1);
+    background-color: darkseagreen;
 }
 button a{
     text-decoration: none;
 }
-footer {
+/*footer {
     background-color: #b6d5d9;
     padding: 20px 0;
     text-align: center;
     font-size: clamp(10px,1rem,32px);
+}*/
+footer.item
+{
+    background-color: #b6d5d9;
+    color: #000;
+    padding: 20px 0;
+    text-align: center;
+    font-size: clamp(10px,1rem,32px);
+    
 }
 footer a{
     text-decoration: none;
@@ -254,6 +258,65 @@ footer a{
     #compte_agence{
         display: flex;
         flex-wrap: nowrap;
+    }
+    .container{
+        display: grid;
+        align-items: center;
+        /*grid-template-columns:/*1fr 2fr 1fr repeat(3,1fr); /*repeat(3, minmax(min-content, max-content));
+        grid-template-rows: 150px 150px; exemple grid.css*/
+        
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:"principal lateral"/*le point permet de créer une cellule vide*/
+                            ;
+        background-color: rgb(220, 243, 250);
+        /*height: 500px;
+        width: 800px;*/
+        /*grid-auto-flow: column;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille
+        grid-auto-rows: 100px;/*afin de quand même gérer les lignes ou colonnes non définies lors de la conception de la grille*/
+    }
+    .item
+    {
+        background-color: rgb(220, 243, 250);
+        color: #000;
+        padding: 15px;
+        text-align: center;
+        font-size: 16px;
+        
+    }
+    
+    section{grid-area:principal;}
+    aside{grid-area:lateral;}
+    
+    
+    .texte1{
+        text-align: left;
+    }
+    .fotolia{
+        width: 100%;
+    }
+    aside {
+        background-size: cover;
+    }
+    .itza{
+        width: 100%;
+    }
+    .texte2{
+        color: #000;
+    }
+    button{
+        background-color: rgb(106, 198, 36);
+        border-radius: 15px;
+        color: blue;
+        font-size: 18px;
+        margin-bottom: 20px;
+        margin-left: 250px;
+    }
+    button:hover{
+        transform:scale(1.1);
+        background-color: darkseagreen;
+    }
+    button a{
+        text-decoration: none;
     }
     
     footer{
