--- a/CSS/sejour.css
+++ b/CSS/sejour.css
@@ -1,21 +1,10 @@
-html {
-    font-size: 5vw;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-}
-
 .logo {
     display: flex;
     align-items: center;
 }
 
 .logo img {
-    width: clamp(60px, 4rem, 100px);
+    height: clamp(60px, 4rem, 100px);
     margin-right: 15px;
 }
 
@@ -38,6 +27,7 @@ header>a,
 
 header a {
     text-decoration: none;
+    color:black;
 }
 
 .break {
@@ -54,12 +44,12 @@ nav {
     padding-left: 10%;
 }
 
-nav ul {
+nav div > ul {
     display: none;
     position: absolute;
     left: 1%;
     list-style-type: none;
-    width: 98%;
+    width: 48%;
     padding-inline-start: 0;
 }
 
@@ -78,12 +68,15 @@ nav input {
     display: none;
 }
 
-.bouton_lien {
+.bouton_lien, .deroulant p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 10px 0;
+    width: 100%;
 }
+
 
 .bouton_telephone {
     flex-direction: row;
@@ -96,14 +89,46 @@ nav input {
 
 nav ul li {
     border: 1px solid black;
-    width: 100%;
+    width: 99%;
     text-align: center;
     border-radius: 20px;
     background-color: #E9FCF7;
+    display: flex;
+    justify-content: center;
 }
 
-nav ul li:nth-child(1),
-nav ul li:last-child {
+.deroulant{    
+    position : relative;
+}
+
+.deroulant p{
+    margin : 0;
+    flex-direction: row;
+}
+
+.deroulant p:after{
+    content:" ▼";
+}
+
+.sous_menu{
+    display: none;
+    position :absolute;
+    list-style-type: none;
+    padding-inline-start: 0;
+    left:101%;
+    width:105%;
+    top:0;
+    overflow :scroll;
+    height:315%;
+}
+
+.deroulant:hover .sous_menu{
+    display: flex;
+    flex-direction: column;
+}
+
+nav div > ul > li:nth-child(1),
+nav div > ul > li:last-child {
     border: none;
     background-color: white;
 }
@@ -117,7 +142,289 @@ nav ul li:last-child {
     opacity: 0.5;
     height: 100vh;
     width: 100%;
+}footer {
+    background-color: #b6d5d9;
+    padding: 20px 0;
+    text-align: center;
+    font-size: clamp(10px, 1rem, 32px);
 }
+
+footer a {
+    text-decoration: none;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    row-gap: 0.7rem;
+    justify-items: center;
+    align-items: center;
+}
+
+.grid>* {
+    margin: 0 1.2rem;
+}
+
+#newsletter {
+    grid-column: 1/5;
+    grid-row: 1/3;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 25px;
+    background-color: white;
+}
+
+#newsletter label {
+    margin-bottom: 15px;
+}
+
+#newsletter>div {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+#newsletter input:first-child {
+    padding: 4%;
+    width: 70%;
+}
+
+#newsletter input:last-child {
+    padding: 4%;
+}
+
+#informations_agence {
+    grid-column: 1/3;
+    grid-row: 3/6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#informations_agence p {
+    margin: 0 0 20px;
+}
+
+#informations_agence a {
+    line-height: 2.5em;
+}
+
+#offres_entreprise {
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+
+#Nos_formules {
+    grid-column: 3/5;
+    grid-row: 4/5;
+}
+
+#Infos_pratiques {
+    grid-column: 3/5;
+    grid-row: 5/6;
+}
+
+#paiements {
+    display: flex;
+    grid-column: 1/5;
+    grid-row: 6/7;
+    background-color: white;
+}
+
+#paiements img {
+    height: clamp(20px, 3rem, 100px);
+}
+
+@media screen and (min-width:1024px) {
+
+    .break {
+        display: block;
+    }
+
+    nav label {
+        display: none;
+    }
+
+    nav input[type=checkbox]:checked+#menu_cache {
+        max-height: 0;
+        overflow: hidden;
+    }
+
+    nav input[type=checkbox]:checked+#menu_cache>ul {
+        flex-direction: row;
+    }
+
+    #menu_cache {
+        transition-duration: 0.3s;
+        max-height: 300px;
+    }
+
+    nav div > ul {
+        display: flex;
+        position: relative;
+        justify-content: center;
+        width: 100%;
+        left: 0%;
+    }
+
+    .bouton_lien, .deroulant p{
+        padding: clamp(10px, 0.2rem, 30px) clamp(20px, 0.4rem, 40px);
+    }
+
+    nav ul li{
+        width: 200%;
+        border-radius: 0;
+        font-size: clamp(12px, 0.30rem, 24px);
+    }
+
+    nav div > ul > li:nth-child(1),
+    nav div > ul > li:nth-child(2),
+    nav div > ul > li:last-child {
+        display: none;
+    }
+
+.deroulant{    
+    position : relative;
+}
+
+.sous_menu{
+    left:0;
+    width: auto;
+    height: auto;
+    top:100%;
+    overflow: visible;
+}
+
+.deroulant:hover .sous_menu{
+    display: flex;
+    flex-direction: column;
+}
+
+    #overlay {
+        top: 90%;
+        height: 20px;
+        opacity: 0;
+    }
+
+    #overlay:hover {
+        opacity: 0.3;
+    }
+
+    header {
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    header>a,
+    #compte_agence>a {
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        font-size: clamp(12px, 0.3rem, 24px);
+    }
+
+    header>a img,
+    #compte_agence>a img {
+        height: clamp(20px, 0.8rem, 50px);
+    }
+
+    #compte_agence {
+        display: flex;
+        flex-wrap: nowrap;
+    }footer {
+        display: flex;
+        flex-direction: column;
+        font-size: clamp(12px, 0.3rem, 24px);
+    }
+
+    footer p:last-child {
+        margin-bottom: 0;
+    }
+
+    .grid {
+        gap: 20px;
+        align-items: center;
+        grid-template-columns: repeat(4, minmax(50px, 300px));
+        margin: 0 auto;
+    }
+
+    .grid>* {
+        margin: 0;
+    }
+
+    #newsletter {
+        grid-column: 4/5;
+        grid-row: 2/3;
+    }
+
+    #newsletter label {
+        font-size: clamp(12px, 0.3rem, 24px);
+    }
+
+    #newsletter div {
+        display: flex;
+        justify-content: center;
+    }
+
+    #newsletter input[type="mail"] {
+        width: clamp(120px, 10vw, 350px);
+    }
+
+    #informations_agence {
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
+    #informations_agence a {
+        line-height: 1.5em;
+    }
+
+    #offres_entreprise {
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+
+    #Nos_formules {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    #Infos_pratiques {
+        grid-column: 4/5;
+        grid-row: 1/2;
+    }
+
+    #paiements {
+        grid-column: 2/4;
+        grid-row: 2/3;
+    }
+
+
+}
+
+
+/*---------------------------------------------------------*/
+/*------------  header and footer au-dessus  --------------*/
+/*---------------------------------------------------------*/
+
+html {
+    font-size: 5vw;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+/* reset de page et debut de responsive au dessus */
+
+
+
 
 main {
     display: flex;
@@ -265,181 +572,8 @@ main>p {
     }
 }
 
-footer {
-    background-color: #b6d5d9;
-    padding: 20px 0;
-    text-align: center;
-    font-size: clamp(10px, 1rem, 32px);
-}
-
-footer a {
-    text-decoration: none;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    row-gap: 0.7rem;
-    justify-items: center;
-    align-items: center;
-}
-
-.grid>* {
-    margin: 0 1.2rem;
-}
-
-#newsletter {
-    grid-column: 1/5;
-    grid-row: 1/3;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    padding: 25px;
-    background-color: white;
-}
-
-#newsletter label {
-    margin-bottom: 15px;
-}
-
-#newsletter>div {
-    position: relative;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-#newsletter input:first-child {
-    padding: 4%;
-    width: 70%;
-}
-
-#newsletter input:last-child {
-    padding: 4%;
-}
-
-#informations_agence {
-    grid-column: 1/3;
-    grid-row: 3/6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#informations_agence p {
-    margin: 0 0 20px;
-}
-
-#informations_agence a {
-    line-height: 2.5em;
-}
-
-#offres_entreprise {
-    grid-column: 3/5;
-    grid-row: 3/4;
-}
-
-#Nos_formules {
-    grid-column: 3/5;
-    grid-row: 4/5;
-}
-
-#Infos_pratiques {
-    grid-column: 3/5;
-    grid-row: 5/6;
-}
-
-#paiements {
-    display: flex;
-    grid-column: 1/5;
-    grid-row: 6/7;
-    background-color: white;
-}
-
-#paiements img {
-    height: clamp(20px, 3rem, 100px);
-}
 
 @media screen and (min-width:1024px) {
-
-    .break {
-        display: block;
-    }
-
-    nav label {
-        display: none;
-    }
-
-    nav input[type=checkbox]:checked+#menu_cache {
-        max-height: 0;
-        overflow: hidden;
-    }
-
-    nav input[type=checkbox]:checked+#menu_cache>ul {
-        flex-direction: row;
-    }
-
-    #menu_cache {
-        transition-duration: 0.5s;
-        max-height: 300px;
-    }
-
-    nav ul {
-        display: flex;
-        position: relative;
-        justify-content: center;
-    }
-
-    .bouton_lien {
-        padding: clamp(10px, 0.2rem, 30px) clamp(20px, 0.4rem, 40px);
-    }
-
-    nav ul li {
-        width: max-content;
-        border-radius: 0;
-        font-size: clamp(12px, 0.30rem, 24px);
-
-    }
-
-    nav ul li:nth-child(1),
-    nav ul li:nth-child(2),
-    nav ul li:last-child {
-        display: none;
-    }
-
-    #overlay {
-        top: 90%;
-        height: 20px;
-        opacity: 0;
-    }
-
-    #overlay:hover {
-        opacity: 0.3;
-    }
-
-    header {
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-    }
-
-    header>a,
-    #compte_agence>a {
-        display: flex;
-        align-items: center;
-        flex-wrap: nowrap;
-        font-size: clamp(12px, 0.3rem, 24px);
-    }
-
-    header>a img,
-    #compte_agence>a img {
-        height: clamp(20px, 0.8rem, 50px);
-    }
-
-    #compte_agence {
-        display: flex;
-        flex-wrap: nowrap;
-    }
 
     main {
         background-color: #E9FCF7;
@@ -543,75 +677,4 @@ footer a {
     .exemple_ecotourisme:last-child {
         display: none;
     }
-
-
-    footer {
-        display: flex;
-        flex-direction: column;
-        font-size: clamp(12px, 0.3rem, 24px);
-    }
-
-    footer p:last-child {
-        margin-bottom: 0;
-    }
-
-    .grid {
-        gap: 20px;
-        align-items: center;
-        grid-template-columns: repeat(4, minmax(50px, 300px));
-        margin: 0 auto;
-    }
-
-    .grid>* {
-        margin: 0;
-    }
-
-    #newsletter {
-        grid-column: 4/5;
-        grid-row: 2/3;
-    }
-
-    #newsletter label {
-        font-size: clamp(12px, 0.3rem, 24px);
-    }
-
-    #newsletter div {
-        display: flex;
-        justify-content: center;
-    }
-
-    #newsletter input[type="mail"] {
-        width: clamp(120px, 10vw, 350px);
-    }
-
-    #informations_agence {
-        grid-column: 1/2;
-        grid-row: 1/3;
-    }
-
-    #informations_agence a {
-        line-height: 1.5em;
-    }
-
-    #offres_entreprise {
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-
-    #Nos_formules {
-        grid-column: 2/3;
-        grid-row: 1/2;
-    }
-
-    #Infos_pratiques {
-        grid-column: 4/5;
-        grid-row: 1/2;
-    }
-
-    #paiements {
-        grid-column: 2/4;
-        grid-row: 2/3;
-    }
-
-
 }
