--- a/CSS/yucatan.css
+++ b/CSS/yucatan.css
@@ -484,6 +484,28 @@ main div > p{
     align-items: center;
 }
 
+main aside{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+aside button{
+    background-color: rgb(106, 198, 36);
+    border-radius: 15px;
+    color: blue;
+    font-size: 18px;
+    padding : 10px 30px;
+}
+aside button:hover{
+    transform:scale(1.1);
+    background-color: darkseagreen;
+}
+aside button a{
+    text-decoration: none;
+}
+
 @media screen and (min-width:1024px){
 
     main{
@@ -491,6 +513,8 @@ main div > p{
         grid-template-columns:repeat(2, 1fr);
         justify-items: center;
         align-items: center;
+        font-size: clamp(12px, 0.4rem, 24px);
+        margin-top:120px;
     }
     .image_presentation, #presentation, .detail{
         grid-column: 1/3;
@@ -521,5 +545,10 @@ main div > p{
 
     .petit_image{
         width: clamp(30px, 3rem, 150px);
+    }
+
+    main aside{
+        grid-column-start: 2;
+        grid-row: 5/7;
     }
 }
